src/home/components/top-section/index.scoped.sass
@use '../../../styles/utilities'

.container
  max-width: 100%
  // height: 100vh
  // height: 100vh
    /* Fallback for browsers that do not support Custom Properties */
  height: calc(var(--vh, 1vh) * 100)
  overflow: hidden
  display: flex
  align-items: center
  justify-content: center
  @media (min-width: utilities.$smallScreenEnd)
    margin-bottom: 10vh

img.center-img
  z-index: 1
  position: absolute
  left: 25%
  object-position: -70px 0px
  width: 20em
  height: 30em
  object-fit: cover
  opacity: 0
  animation: fadeInAndUp 800ms ease-in-out
  animation-fill-mode: forwards
  border-radius: utilities.$borderRadius
  filter: utilities.$imageColorFilter
  @media (max-width: utilities.$smallScreenEnd)
    left: auto
    right: auto

.side-image-container
  position: absolute
  z-index: -1

img.side-img
  width: 10em
  height: 10em
  object-fit: cover
  border-radius: utilities.$borderRadius
  filter: utilities.$imageColorFilter
  @media (max-width: utilities.$smallScreenEnd)
    visibility: hidden
    opacity: 0

.block-of-text
  position: absolute
  display: flex
  flex-direction: column
  height: 80vh
  align-items: center
  justify-content: center
  z-index: 1
  left: calc(25% + 22em)
  @media (max-width: utilities.$smallScreenEnd)
    justify-content: space-around
    left: auto
    right: auto

  h1
    font-family: satisfy
    font-size: 4em
    // line-height: 1
    text-align: center
    margin-left: -4.65em
    width: 90%
    margin-bottom: .1em
    animation: fadeInAndUpSkewed 800ms ease-in-out .66666666s
    opacity: 0
    animation-fill-mode: forwards
    @media (max-width: utilities.$smallScreenEnd)
      margin-top: -20px
      margin-left: 0
      text-align: center

  p.about
    color: utilities.$regColor
    font-family: Tajawal-Regular
    font-size: utilities.$regFontSize
    width: 20em
    @media(max-width: utilities.$smallScreenEnd)
      visibility: hidden

$actionColor: #008EC4
$actionColorHover: #00C7DF

.action
  display: flex
  align-items: center
  color: $actionColor
  transition: color 200ms
  cursor: pointer
  opacity: 0
  animation: fadeInAndUp 800ms ease-in-out 4.5s
  animation-fill-mode: forwards
  &:hover
    color: $actionColorHover
    transition: color 200ms
  .icon
    margin-left: .3em
  @media(max-width: utilities.$smallScreenEnd)
    visibility: hidden

